<resources>
    <string name="app_name">womensafetyapp</string>
    <string name="login_page">Login Page</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="enter_email">Enter email...</string>
    <string name="username_email">Username/Email</string>
    <string name="enter_password">Enter password...</string>
    <string name="login_image">Login image</string>
    <string name="google_image">google image</string>
    <string name="cancel">Cancel</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_name">Enter name...</string>
    <string name="enter_mobile_number">Enter mobile number...</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="signup_image">signup image</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="shesafe">SHESAFE</string>
    <string name="good_morning">Good Morning</string>
    <string name="fake_call">Fake Call</string>
    <string name="helpline">Helpline</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="hii">Hello</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>