<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".Dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e6d2f2">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header_container"
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:background="@drawable/top"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_greeting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile" />


            <TextView
                android:id="@+id/tv_greetings_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="113dp"
                android:text="@string/hii"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_greeting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_pic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="92dp"
                android:text="Name"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_greeting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toEndOf="@+id/tv_greetings_prefix"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_greeting"
                android:layout_width="229dp"
                android:layout_height="50dp"
                android:layout_marginBottom="68dp"
                android:text="@string/good_morning"
                android:textColor="#DCDA45"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_pic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/features"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="4"
            android:layout_marginTop="2dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_header_container">

            <LinearLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/Audio"
                    android:layout_width="79dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/audio" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_recorder"
                    android:layout_marginLeft="3dp"
                    android:textAlignment="center"
                    android:textColor="#813cb9"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/fakecallbutton"
                    android:layout_width="79dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="visible"
                    android:contentDescription="Fake Call Button"
                    app:srcCompat="@drawable/call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake_call"
                    android:textAlignment="center"
                    android:textColor="#813cb9"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/helpline"
                    android:layout_width="79dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/helpline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpline"
                    android:textAlignment="center"
                    android:textColor="#813cb9"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/safetyTips
"
                    android:layout_width="79dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/safetytips" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safety_tips"
                    android:textAlignment="center"
                    android:textColor="#813cb9"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="404dp"
            android:layout_marginBottom="1dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:autoStart="true"
                android:flipInterval="5000"
                android:inAnimation="@anim/slide_in_left"
                android:outAnimation="@anim/slide_out_right"
                android:padding="10dp"
                app:circularflow_defaultRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    app:srcCompat="@drawable/one" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/two" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/three" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/four" />

            </ViewFlipper>
        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bottom_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/home" />


                <ImageView
                    android:id="@+id/location"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView12"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/location" />

                <ImageView
                    android:id="@+id/chatbot"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView16"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/chatbot" />

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="56dp"
                    android:layout_height="51dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/profile1" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/SOS"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/sos" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/navigation_bar"
            android:id="@+id/incl_layout_navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:contentDescription="Open Settings"
        app:dividerInsetStart="5dp"
        app:headerLayout="@layout/activity_drawer_header"
        app:itemIconPadding="30dp"
        app:menu="@menu/drawer_items" />

</androidx.drawerlayout.widget.DrawerLayout>